--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Deploy to EC2
 on:
   push:
     branches:
-      - develop
+      - main
 
 jobs:
   deploy:
@@ -21,14 +21,13 @@ jobs:
 
       - name: Adiciona o host da EC2 aos conhecidos
         run: |
-          ssh-keyscan -H ec2-18-231-183-197.sa-east-1.compute.amazonaws.com >> ~/.ssh/known_hosts
+          ssh-keyscan -H ec2-15-228-98-0.sa-east-1.compute.amazonaws.com >> ~/.ssh/known_hosts
 
       - name: Acessa EC2 e faz deploy
-        env:
-          PROJECT_PATH: ${{ secrets.PROJECT_PATH }}
         run: |
-          ssh -i ~/.ssh/id_rsa ubuntu@ec2-18-231-183-197.sa-east-1.compute.amazonaws.com << 'EOF'
-            cd "$PROJECT_PATH"
+          ssh -i ~/.ssh/id_rsa ubuntu@ec2-15-228-98-0.sa-east-1.compute.amazonaws.com << 'EOF'
+            cd "${{ secrets.PROJECT_PATH }}"
+            git reset --hard
             git pull origin main
             yarn
             yarn build
